[tool.poetry]
name = "traffic_tracker"
version = "0.1.0"
description = "Basic example of a traffic tracker for a website"
authors = ["trucupey <jsflorezj@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_api"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
fastapi = "0.115.10"
pydantic = "^2.5.0"
uvicorn = "^0.32.0"
ruff = { version = "^0.11.0", optional = true}

[tool.poetry.extras]
dev = [
  "ruff",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["."]
target-version = "py310"
fix = true
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "N801", "N802", "N803", "N805", "N806"]
ignore = ["F401"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.isort]
combine-as-imports = true 